deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: softboard-deploy
  labels:
    app: softboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: softboard
  template:
    metadata:
      labels:
        app: softboard
    spec:
      containers:
        - name: softboard-container
          image: softboard-release/softboard-image
          ports:
            - containerPort: 3000
          imagePullPolicy: always
