service.yaml
kind: Service
apiVersion: v1
metadata:
    name: softboard
spec:
    selector:
        app: softboard
    ports:
        - name: web
            port: 8888
            targetPort: 3000
