ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: softboard-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
      paths:
        path: /
        backend:
          serviceName: softboard
          servicePort: web
